--- a/Week 6/week6_exercises_methods2.Rmd
+++ b/Week 6/week6_exercises_methods2.Rmd
@@ -15,6 +15,43 @@ exercises in the folder for today.
 
  - Exercise 4.3 in the book
  - Exercise 1 , 3 and 6 shown as pictures. 
+ 
+```{r}
+a1<- matrix(seq(1,4, by =1), ncol = 2)
+det(a1)
+
+b1<-matrix(c(0,3,-3,0), ncol=2, byrow = TRUE)
+det(b1)
+
+c1<-matrix(c(1,0,3,6), ncol=2, byrow = TRUE)
+det(c1)
+
+l1<-matrix(c(3,9,3,-10,3,0,3,0,3,7,3,-1,3,11,3,-1), ncol = 4, byrow = TRUE)
+det(l1)
+```
+
+```{r}
+pacman::p_load(pracma)
+a3<-pracma::cross(c(1,2,3),c(1,0,3))
+
+b3<-pracma::cross(c(5,3,7),c(1,0,0))
+```
+ 
+ 
+ 
+```{r}
+a6<-a1
+test<-inv(a6)
+test
+inv(test)
+
+b6<-b1
+inv(b6)
+
+f6<-matrix(c(1,0,0,3,6,0,3,5,4), ncol=3, byrow=TRUE)
+inv(f6)
+```
+ 
  - 
 
 # Intro to matrix operations in R.
@@ -35,6 +72,13 @@ matrix1 %*% matrix2
 # 2x5 premultiplied by 5x2 = 2x2 
 matrix2 %*% matrix1
 ```
+Another test
+```{r}
+test1<-matrix(c(0,0,1,0,1,0,1,0,1), nrow=3, byrow=TRUE)
+
+test1 %*% test1 
+```
+
 
 *Transposing*
 ```{r}
@@ -49,7 +93,7 @@ The first column is now the first row and so forth.
 *Inverse*
 ```{r}
 # solve() is used to find the inverse of a matrix
-solve(matrix1)
+inv(matrix1)
 ```
 This gives us an error message that saying that we don't have a square matrix and therefore cannot find the inverse. 
 
@@ -70,6 +114,7 @@ You can test this yourself if you still don't believe me. ;)
 We find the inverse of $(t(X)X)^{-1}$
 ```{r}
 solve(t(matrix1) %*% matrix1)
+inv(t(matrix1) %*% matrix1)
 ```
 
 
@@ -98,13 +143,35 @@ det(matrix3)
 
 ## Exercise 1
 
+
     1) Simulate random X variables (choose as many as you want) and make a design matrix
     
+```{r}
+pacman::p_load(tidyverse)
+df<-read_csv("winequality.csv")
+
+design <- subset(df, select=c("fixed acidity", "alcohol", "quality"))
+v1<-rep(1,length(design$alcohol))
+design<-cbind(v1,design)
+
+```
+    
+    
     2) Decide on your beta values and save it in a beta vector.  
+```{r}
+beta<-c(0,15)
+```
+
 
     3) Using matrix multiplication find y based on our beta vector and design matrix. 
         3.1) Plot the relationship between y ~ x
         3.2) Does something look odd? 
+
+```{r}
+
+plot(lm(quality ~ alcohol, data = design))
+```
+
         
     4) Simulate errors and add it your y vector so that it becomes yhat. 
         4.1) Plot the new y ~ x and the abline corresponding to our beta values. 
